--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "bacon/bacon-qr-code": "^2.0",
         "beyondcode/laravel-websockets": "^1.14",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.7",
